update doc for windows 8 rp

--- a/HowToCreateNewProject.html
+++ b/HowToCreateNewProject.html
@@ -2,8 +2,8 @@
 <hr />
 <p>This is a tutorial on how to setup Cocos2dx-win8 for Windows 8 and create a HelloWorld project</p>
 <h2>Setup enviroment</h2>
-<p>OS: Windows 8 consumer preview (8250 build)</p>
-<p>IDE: Visual Studio 2011 beta</p>
+<p>OS: Windows 8 Relese Preview (8400 build)</p>
+<p>IDE: Visual Studio 2012 RP</p>
 <p>git(optional): <a href="http://code.google.com/p/msysgit/">msysgit</a>  <a href="http://code.google.com/p/tortoisegit/">TortoistGit</a></p>
 <p><strong> Suppose them were all default installed. </strong> </p>
 <h2>Get engine code</h2>
@@ -21,7 +21,7 @@
 <h2>Create HelloWorld project</h2>
 <h3>Install VS project template</h3>
 <ul>
-<li>click "d:\cocos2dx-win8\Cocos2dx-win8-vs2011-Template.vsi" to install.</li>
+<li>click "d:\cocos2dx-win8\Cocos2dx-win8-vs2012-Template.vsi" to install.</li>
 </ul>
 <h3>Create project</h3>
 <ol>
