--- a/HowToCreateNewProject.html
+++ b/HowToCreateNewProject.html
@@ -1,51 +1,1 @@
-<h1>How to Create a New cocos2dx-win8 project on Windows 8</h1>
-<hr />
-<p>This is a tutorial on how to setup Cocos2dx-win8 for Windows 8 and create a HelloWorld project</p>
-<h2>Setup enviroment</h2>
-<p>OS: Windows 8 Relese Preview (8400 build)</p>
-<p>IDE: Visual Studio 2012 RP</p>
-<p>git(optional): <a href="http://code.google.com/p/msysgit/">msysgit</a>  <a href="http://code.google.com/p/tortoisegit/">TortoistGit</a></p>
-<p><strong> Suppose them were all default installed. </strong> </p>
-<h2>Get engine code</h2>
-<ul>
-<li>
-<p>From github: git clone <a href="https://github.com/cocos2d-x/cocos2dx-win8">https://github.com/cocos2d-x/cocos2dx-win8</a></p>
-<pre><code>or
-</code></pre>
-</li>
-<li>
-<p>Download <a href="http://www.cocos2d-x.org">cocos2dx-win8.zip</a></p>
-</li>
-</ul>
-<p><strong> Suppose we put it on the "d:\cocos2dx-win8" </strong></p>
-<h2>Create HelloWorld project</h2>
-<h3>Install VS project template</h3>
-<ul>
-<li>click "d:\cocos2dx-win8\Cocos2dx-win8-vs2012-Template.vsi" to install.</li>
-</ul>
-<h3>Create project</h3>
-<ol>
-<li>Open vs2011, Click menu: File-&gt;New-&gt;Project..</li>
-<li>
-<p>Choose Templates-&gt;Visual C++-&gt; Windows Metro style, select the Cocos2d template to create project like followed snapshot:<br/> 
-<img alt="Alt text" src="./doc/new.png" /> <br/>
-Here,we create at <strong>  "d:\Projects\" </strong></p>
-</li>
-<li>
-<p>You may see followed snapshot, just click OK and Close vs2011.<br/> <img alt="Alt text" src="./doc/op_OK.png" /></p>
-</li>
-<li>copy "d:\cocos2dx-win8\CreateProject.bat" to "d:\Projects\helloworld-cocos2d"</li>
-<li>
-<p>Edit CreateProject.bat,set appropriate variable</p>
-<pre><code>set PROJECT_NAME=helloworld-cocos2d
-set COCOS2D_DIR=d:\cocos2dx-win8
-set PROJECT_DIR=d:\Projects\helloworld-cocos2d
-</code></pre>
-</li>
-<li>
-<p>Run CreateProject.bat</p>
-</li>
-<li>Open helloworld-cocos2d.sln and add "d:\Projects\helloworld-cocos2d\helloworld-cocos2d\helloworld-cocos2d.vcxproj" into.<br/> <img alt="Alt text" src="./doc/add_project_into.png" /> <br/> </li>
-<li>Done!</li>
-</ol>
-<p><img alt="Alt text" src="./doc/final.png" /></p>
+<p>See the <a href="./doc/index.html">The Cocos2dx-win8 SDK Guide</a></p>
