--- a/wp8_tests_status.html
+++ b/wp8_tests_status.html
@@ -35,7 +35,7 @@ Pass
 TransitionsTest
 </th>
 <th>
-with issues
+With issues
 </th>
 <th>
 With DX warning
@@ -288,10 +288,10 @@ Pass
 RenderTextureTest
 </th>
 <th>
-Pass
+With issues
 </th>
 <th>
-&nbsp;
+Render Texture not work.
 </th>
 </tr>
 <tr>
@@ -299,7 +299,7 @@ Pass
 Texture2DTest
 </th>
 <th>
-with issues
+With issues
 </th>
 <th>
 Texture Pixel Format not supported:
@@ -431,7 +431,7 @@ Only support wave format file
 PerformanceTest
 </th>
 <th>
-with issues
+With issues
 </th>
 <th>
 See Texture2DTest
@@ -497,7 +497,7 @@ Pass
 FontTest
 </th>
 <th>
-with issues
+With issues
 </th>
 <th>
 Text aligment is not implemented
@@ -519,10 +519,10 @@ Pass
 TextureCacheTest
 </th>
 <th>
-Not implement
+Part implement
 </th>
 <th>
-&nbsp;
+Asynchronous loading is not implemented
 </th>
 </tr>
 <tr>
